--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -13,11 +13,11 @@
                     <div class="section-title mb-0">
                         <h2>Nosotros</h2>
                     </div>
-                    <p>Esta página fue hecha como proyecto de la clase de Desarollo de Aplicaciónes y Servicios Web. Donde la primer entrega era solo hace como un mock-up de lo que sería la pagina final.</p>
+                    <p>Esta web app fue hecha como proyecto de la clase de Programación de Aplicaciónes de Escritorio.</p>
                     <ul>
                         <li>Escuela: ITESO</li>
-                        <li>Alumnos: Alonso, Ricardo</li>
-                        <li>Profesor: Luis Fernando</li>
+                        <li>Alumnos: Ricardo y Luis</li>
+                        <li>Profesor: Francisco Sevilla</li>
                     </ul>
                     <h2 class="ml-3 mb-3">Mandanos tus opiniones</h2>
                     <form class="contact-from">
