--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1923,5 +1923,8 @@ iframe
   line-height: 30px
   padding: 7px 12px
   height: 44px
+
+$theme-colors: ("primary": #fc0254)
+
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap'
+@import "node_modules/bootstrap/scss/bootstrap"
