--- a/src/app/layout/modal-login/modal-login.component.html
+++ b/src/app/layout/modal-login/modal-login.component.html
@@ -29,7 +29,7 @@
 		</form>
 	</div>
 	<div class="modal-footer">
-		<button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Confirmar</button>
+		<button type="button" class="btn btn-outline-dark" (click)="login()">Confirmar</button>
 	</div>
 </ng-template>
 
