--- a/src/app/layout/modal-new-user/modal-new-user.component.html
+++ b/src/app/layout/modal-new-user/modal-new-user.component.html
@@ -64,7 +64,7 @@
         </form>
     </div>
 	<div class="modal-footer">
-		<button type="button" class="btn btn-outline-dark">Registrarse</button>
+		<button type="button" class="btn btn-outline-dark" (click)="create()">Registrarse</button>
 	</div>
 </ng-template>
 
