modal nueva lista

--- a/src/app/pages/playlist/playlist.component.html
+++ b/src/app/pages/playlist/playlist.component.html
@@ -97,7 +97,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
-                <a href="#" class="site-btn">Crear lista nueva</a>
+                <app-modal-new-list></app-modal-new-list>
             </div>
             <div class="col-lg-6">
                 <div class="d-flex h-100 align-items-end">
