--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -3,76 +3,29 @@
 	  <div class="container ml-5 mt-3 mb-3">
 		<div class="row media border p-3">
 	  
-		  <div class="media-body  mt-3 mr-5 col-3" id="userImg">
-		
+		  <div class="media-body  mt-3 mr-5 col-3">
+			<!-- {{userImg}} -->
 		  </div>
 	  
 		  <div class="col-8" id="userData">
-			
+			<h3>{{userName}}</h3>
+			<br>
+			Correo: {{userMail}}
+			<br>
+			Sexo: {{userSex}}
+			<br>`
 		  </div>
 	  
 		  <div class="col-2">
 			  <br>
 			  <br>
-			<button class="btn btn-primary mb-3" data-toggle="modal" data-target="#Jedit" type="button" >Editar perfil</button>
+			  <app-modal-edit-user></app-modal-edit-user>
 	  
 		  </div>
 		</div>
 	  </div>
 	  <div class="col text-center">
-	  	 <button type="button" class="btn btn-primary mb-3 center-block" onclick="logOut()">Cerrar sesión</button>
+	  	<button type="button" class="btn btn-primary" (click)="logOut()">Cerrar sesión</button>
 	  </div>
-	
+	  <br>
 	  
-	  <!-- Modal -->
-	  <div class="modal fade" id="Jedit" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
-		<div class="modal-dialog" role="document">
-		  <div class="modal-content">
-			<div class="modal-header">
-			  <h5 class="modal-title">Edición de usuario</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				  <span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<div class="modal-body">
-			  <div class="form-group row">
-				<div class="col-6">
-				  <input type="text" class="form-control" name="nombre" id="chN" aria-describedby="helpId" placeholder="Nombre o nombres" value="John" required>
-				</div>
-				<div class="col-6">
-				  <input type="text" class="form-control" name="apellido" id="chA" aria-describedby="helpId" placeholder="Apellidos" value="Doe" required>
-				</div>
-			  </div>
-			  <div class="form-group">
-				  <label for="correo"></label>
-				  <input type="email" class="form-control" name="correo" id="chC" aria-describedby="emailHelpId" placeholder="Tu correo" value="jdoe@test.com" required>
-			  </div>
-			  <div class="form-group">
-				<label for="fecha"></label>
-				<input type="date" class="form-control" name="fecha" id="fecha" value="2000-01-01" max="2019-12-31">
-			  </div>              
-			  <div class="form-check">
-				<label class="form-check-label">
-				  <input type="radio" class="form-check-input" name="se" id="sx1" >
-				  Mujer
-				</label>
-				<br>
-				<label class="form-check-label">
-					<input type="radio" class="form-check-input" name="se" id="sx2" checked>
-					Hombre
-				  </label>
-			  </div>
-			
-			  <div class="form-group">
-				<label for="pfp"></label>
-				<input type="text"
-				  class="form-control" name="pfp" id="pfp" placeholder="URL imagen de perfil" value="https://randomuser.me/api/portraits/men/26.jpg">               
-			  </div>
-			</div>
-			<div class="modal-footer">
-			  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-			  <button type="submit" class="btn btn-warning" data-dismiss="modal" onclick="editUser(localStorage.currentUser)">Editar</button>
-			</div>
-		  </div>
-		</div>
-	  </div>
