--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,16 +1,16 @@
 <body>
 	<!-- Hero section -->
 	<section class="hero-section">
-		<div class="hero-slider owl-carousel">
-				<div class="hs-item">
+		<div class="hero-slider">
+				<div class="hs-items">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="hs-text">
 								<h2><span>Guarda tus cosas favoritas</span> en un solo lugar.</h2>
 								<p>Crea listas personalizadas: música, videos, recetas de cocina. Todo ordenado de la manera que TU prefieras. Comparte tu listas con otros usuarios y descubre sus cosas favoritas.</p>
-								<a href="#" class="site-btn" data-toggle="modal" data-target="#login">Login</a>
-								<a href="#" class="site-btn sb-c2" data-toggle="modal" data-target="#regis">Crea una cuenta</a>
+								<a> <app-modal-login></app-modal-login> </a> &nbsp;
+								<a> <app-modal-new-user></app-modal-new-user> </a>
 							</div>
 						</div>
 						<div class="col-lg-6">
