--- a/src/app/pages/singleslist/singleslist.component.html
+++ b/src/app/pages/singleslist/singleslist.component.html
@@ -1,19 +1,18 @@
 <!-- Blog section -->
 <section class="blog-section spad">
-    <div class="container">
-        <!-- Blog post -->
-        <div id="bod"></div>
-        <div class="blog-item" id="ct">
-            <img src="{{lista.imagen}}" alt="">
-        	<h3>{{lista.nombre}}</h3>
-        	<div id="deL">{{lista.descripcion}}</div>
-        </div>
-        <ul id="elem">
-            <li *ngFor="let elemento of lista">{{elemento.elementos}}</li>
-        </ul>
-        <a href="" class="site-btn" data-toggle="modal" data-target="#usure">Borrar lista</a>
-        <a href="" class="site-btn" data-toggle="modal" data-target="#newMax">Añadir elemento</a>
-        
+  <div class="container">
+    <!-- Blog post -->
+    <div id="bod"></div>
+    <div class="blog-item" id="ct">
+      <img src="{{ lista.imagen }}" alt="" />
+      <h3>{{ lista.nombre }}</h3>
+      <div id="deL">{{ lista.descripcion }}</div>
     </div>
+    <ul id="elem">
+      <li *ngFor="let elemento of lista.elementos">{{ elemento.elementos }}</li>
+    </ul>
+    <app-modal-delete-list></app-modal-delete-list> &nbsp;
+    <app-modal-add-to-list></app-modal-add-to-list>
+  </div>
 </section>
 <!-- Blog section end -->
